Fixes strings that does not break on mobile plus lightboxes that didnt show up correctly NDLA-284

--- a/src/components/learning-path.css
+++ b/src/components/learning-path.css
@@ -299,6 +299,7 @@
     width: 100%;
     margin: 0;
     margin-top: 1em;
+    display: block;
   }
   .learning-path-image .image-preview_information {
     padding-left: 0;
